syntax="proto3";

package order_service;
option go_package="genproto/order_service";

import "google/protobuf/empty.proto";


message CreateDriverReq {
    string driver_name = 1;
    string phone_number = 2;
    string experience = 3;
}

message CreateDriverResponse {
    string id = 1;
    string driver_name = 2;
    string phone_number = 3;
    string experience = 4;
    string created_at = 5;
    string updated_at = 6;
}

message DriverId {
    string id = 1;
}

message GetSingleDriverResponse {
    string id = 1;
    string driver_name = 2;
    string phone_number = 3;
    string experience = 4;
    string created_at = 5;
    string updated_at = 6;
}

message GetListDriversReq {
    int32 limit = 1;
    int32 offset = 2;
}

message GetListDriversResponse {
    repeated GetSingleDriverResponse getDrivers = 1;
    int32 count = 2;
}

message UpdateDriverReq {
    string id = 1;
    string driver_name = 2;
    string phone_number = 3;
    string experience = 4;
}

message UpdateDriverResponse {
    string id = 1;
    string driver_name = 2;
    string phone_number = 3;
    string experience = 4;
    string created_at = 5;
    string updated_at = 6;
}